Refactor json2xlsx parser, update gitignore for input/output files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
 __pycache__/
-.devcontainer
-.idea/
-.vscode/
-parsers/**/results/*.csv
-.DS_Store
-files/
+parsers/**/files/**/*.xlsx
+parsers/**/files/**/*.json
